--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -951,12 +951,13 @@ WordPress plugin profile-builder:
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # 2.3.7 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_all_in_one_seo_pack_wordpress_plugin.html
+# 2.3.8 https://www.wordfence.com/blog/2016/07/new-xss-vulnerability-all-in-one-seo-pack/
 WordPress plugin all-in-one-seo-pack:
   1:
     location: ['/wp-content/plugins/all-in-one-seo-pack/readme.txt']
-    secure_version: '2.3.8'
+    secure_version: '3.2.7'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2016/07/new-xss-vulnerability-all-in-one-seo-pack/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-16520 https://www.openwall.com/lists/oss-security/2019/10/16/5 https://github.com/sbaresearch/advisories/tree/public/2019/SBA-ADV-20190913-04_WordPress_Plugin_All_in_One_SEO_Pack'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin squirrly-seo:
