--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -18,6 +18,7 @@
 # oC-SA-2013-018    CVE-2013-1963   5.0.5/4.5.10    https://owncloud.org/about/security/advisories/oC-SA-2013-018/
 # oC-SA-2013-019    CVE-2013-2045   5.0.6           http://owncloud.org/about/security/advisories/oC-SA-2013-019/
 # oC-SA-2013-019    CVE-2013-2046   4.5.11          http://owncloud.org/about/security/advisories/oC-SA-2013-019/
+# N/A               CVE-2014-2048   5.0.15          https://owncloud.org/security/advisories/insecure-openid-implementation/
 # oC-SA-2013-020
 # oC-SA-2013-021
 # oC-SA-2013-022
