--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -908,12 +908,13 @@ WordPress plugin pondol-carousel:
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2016-10706 4.0.3 https://www.wordfence.com/blog/2016/05/jetpack-vulnerability/ https://jetpack.com/2016/05/27/jetpack-4-0-3-critical-security-update/
+# CVE-2016-10705 4.0.4 https://jetpack.com/2016/06/20/jetpack-4-0-4-bug-fixes/ https://wpvulndb.com/vulnerabilities/8517
 WordPress plugin jetpack:
   1:
     location: ['/wp-content/plugins/jetpack/readme.txt']
-    secure_version: '4.0.4'
+    secure_version: '7.9.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-10705 https://jetpack.com/2016/06/20/jetpack-4-0-4-bug-fixes/ https://wpvulndb.com/vulnerabilities/8517'
+    cve: 'https://jetpack.com/2019/11/19/jetpack-7-9-1-maintenance-security/ https://www.bleepingcomputer.com/news/security/millions-of-sites-exposed-by-flaw-in-jetpack-wordpress-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-mobile-detector:
@@ -2414,12 +2415,13 @@ WordPress plugin wordpress-gallery-transformation:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1002028 http://www.vapidlabs.com/advisory.php?v=199'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2019-14936 TODO https://www.blackdragon.team/contents/index.php/cves/cve-2019-14936/ asked status from upstream https://github.com/alextselegidis/easyappointments/issues/664
 WordPress plugin easy-appointments:
   1:
     location: ['/wp-content/plugins/easy-appointments/readme.txt']
     secure_version: '1.12.0'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-15812'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-15812 https://wpvulndb.com/vulnerabilities/8937'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin flash-album-gallery:
