--- a/yamls/zikula.yml
+++ b/yamls/zikula.yml
@@ -1,6 +1,7 @@
 # URL: http://zikula.org/
 # CVE-2011-0535 1.2.5
 # CVE-2013-6168 1.3.6 https://www.htbridge.com/advisory/HTB23178
+# CVE-2014-2293
 # CVE-2016-9835 1.4.4/1.3.11 https://github.com/zikula/core/issues/3237 http://www.securityfocus.com/bid/95005
 Zikula:
   1:
