--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -245,18 +245,21 @@
 # TODO 5.2.4 https://wordpress.org/news/2019/10/wordpress-5-2-4-security-release/
 # CVE-2019-16780 5.3.1 https://wordpress.org/news/2019/12/wordpress-5-3-1-security-and-maintenance-release/ https://hackerone.com/reports/738644 https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-x3wp-h3qx-9w94 https://github.com/WordPress/wordpress-develop/commit/505dd6a20b6fc3d06130018c1caeff764248c29e
 # CVE-2019-16781 5.3.1 https://wordpress.org/news/2019/12/wordpress-5-3-1-security-and-maintenance-release/ https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-pg4x-64rh-3c9v
+# CVE-2019-20041 5.3.1 https://wordpress.org/news/2019/12/wordpress-5-3-1-security-and-maintenance-release/ https://github.com/WordPress/wordpress-develop/commit/b1975463dd995da19bb40d3fa0786498717e3c53
+# CVE-2019-20042 5.3.1 https://wordpress.org/news/2019/12/wordpress-5-3-1-security-and-maintenance-release/ https://github.com/WordPress/wordpress-develop/commit/1f7f3f1f59567e2504f0fbebd51ccf004b3ccb1d https://core.trac.wordpress.org/changeset/46894/trunk
+# CVE-2019-20043 5.3.1 https://wordpress.org/news/2019/12/wordpress-5-3-1-security-and-maintenance-release/ https://github.com/WordPress/wordpress-develop/commit/1d1d5be7aa94608c04516cac4238e8c22b93c1d9 https://core.trac.wordpress.org/changeset/46893/trunk
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
     secure_version: '5.3.1'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2019/12/wordpress-5-3-1-security-and-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2019-16780 https://nvd.nist.gov/vuln/detail/CVE-2019-16781'
+    cve: 'https://wordpress.org/news/2019/12/wordpress-5-3-1-security-and-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2019-16780 https://nvd.nist.gov/vuln/detail/CVE-2019-16781 https://nvd.nist.gov/vuln/detail/CVE-2019-20041 https://nvd.nist.gov/vuln/detail/CVE-2019-20042 https://nvd.nist.gov/vuln/detail/CVE-2019-20043'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
     secure_version: '5.3.1'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2019/12/wordpress-5-3-1-security-and-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2019-16780 https://nvd.nist.gov/vuln/detail/CVE-2019-16781'
+    cve: 'https://wordpress.org/news/2019/12/wordpress-5-3-1-security-and-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2019-16780 https://nvd.nist.gov/vuln/detail/CVE-2019-16781 https://nvd.nist.gov/vuln/detail/CVE-2019-20041 https://nvd.nist.gov/vuln/detail/CVE-2019-20042 https://nvd.nist.gov/vuln/detail/CVE-2019-20043'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
