--- a/yamls/collabtive.yml
+++ b/yamls/collabtive.yml
@@ -2,6 +2,7 @@
 # CVE-2010-5284 http://www.exploit-db.com/exploits/15240
 # CVE-2010-5285 http://www.exploit-db.com/exploits/15240
 # CVE-2012-2670
+# CVE-2013-5027
 # CVE-2013-6872 1.2 http://secunia.com/advisories/56329/
 # CVE-2014-3246 2.0
 # CVE-2014-3247 2.0
