--- a/yamls/tikiwiki.yml
+++ b/yamls/tikiwiki.yml
@@ -11,6 +11,7 @@
 # CVE-2011-4558 8.3/6.6     SA47320 http://dev.tiki.org/item4059 http://info.tiki.org/article185-Tiki-Security-Patches-Available-for-8-3-and-6-6-LTS
 # CVE-2012-3996 8.4
 # CVE-2012-0911 8.4
+# CVE-2013-6022
 # CVE-2016-7394 TODO https://sourceforge.net/p/tikiwiki/code/59653/
 # CVE-2016-9889 16.1/15.3/12.10 https://tiki.org/article443-Security-update-Tiki-16-1-Tiki-15-3-and-Tiki-12-10-released
 # CVE-2016-10143 16.2/15.4/12.11 https://tiki.org/article445-Security-updates-Tiki-16-2-15-4-and-Tiki-12-11-released http://seclists.org/bugtraq/2017/Mar/41
