--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2954,6 +2954,8 @@ WordPress plugin users-customers-import-export-for-wp-woocommerce:
     cve: 'https://www.wordfence.com/blog/2020/03/vulnerability-patched-in-import-export-wordpress-users/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2020-8435 4.6.0.3 https://spider-security.co.uk/blog-cve-2020-8435
+# CVE-2020-8436 4.6.0.3 https://spider-security.co.uk/blog-cve-2020-8436
 WordPress plugin custom-registration-form-builder-with-submission-manager:
   1:
     location: ['/wp-content/plugins/custom-registration-form-builder-with-submission-manager/readme.txt']
