--- a/yamls/zenphoto.yml
+++ b/yamls/zenphoto.yml
@@ -23,11 +23,13 @@
 # CVE-2015-5595 1.4.9   https://www.zenphoto.org/news/zenphoto-1.4.9
 # CVE-2016-XXXX 1.4.12  https://www.zenphoto.org/news/zenphoto-1.4.12 https://blog.curesec.com/article/blog/Zenphoto-1411-RFI-156.html
 # CVE-2018-20140 1.5.1  https://www.netsparker.com/web-applications-advisories/ns-18-043-cross-site-scripting-in-zenphoto/
+# CVE-2020-5592 1.5.7   https://www.zenphoto.org/news/zenphoto-1.5.7/
+# CVE-2020-5593 1.5.7   https://www.zenphoto.org/news/zenphoto-1.5.7/
 Zenphoto:
   1:
     location: ['/zp-core/version.php']
-    secure_version: '1.5.1'
+    secure_version: '1.5.7'
     regexp: ["define.*?ZENPHOTO_VERSION.*?(?P<version>[0-9.]+)"]
-    cve: 'https://www.zenphoto.org/news/zenphoto-1.5.1 https://www.netsparker.com/web-applications-advisories/ns-18-043-cross-site-scripting-in-zenphoto/'
+    cve: 'https://www.zenphoto.org/news/zenphoto-1.5.7/ https://nvd.nist.gov/vuln/detail/CVE-2020-5592 https://nvd.nist.gov/vuln/detail/CVE-2020-5593'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
