--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2743,12 +2743,13 @@ WordPress plugin give:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9909 https://lists.openwall.net/full-disclosure/2019/02/05/9 https://security-consulting.icu/blog/2019/02/wordpress-give-xss/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2019-9910 N/A https://lists.openwall.net/full-disclosure/2019/02/05/11 https://security-consulting.icu/blog/2019/02/wordpress-kingcomposer-xss/
 WordPress plugin kingcomposer:
   1:
     location: ['/wp-content/plugins/kingcomposer/readme.txt']
-    secure_version: 'N/A'
+    secure_version: '2.9.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9910 https://lists.openwall.net/full-disclosure/2019/02/05/11 https://security-consulting.icu/blog/2019/02/wordpress-kingcomposer-xss/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-15299 https://www.wordfence.com/blog/2020/07/xss-flaw-impacting-100000-sites-patched-in-kingcomposer/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin social-networks-auto-poster-facebook-twitter-g:
