--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -290,12 +290,13 @@ WordPress plugin the-holiday-calendar:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9270 http://seclists.org/fulldisclosure/2015/Jul/125'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# TODO 3.8.3 https://research.g0blin.co.uk/g0blin-00039/
 WordPress plugin newsletter:
   1:
     location: ['/wp-content/plugins/newsletter/plugin.php']
-    secure_version: '3.8.3'
+    secure_version: '6.8.2'
     regexp: ['define.*?NEWSLETTER_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://research.g0blin.co.uk/g0blin-00039/'
+    cve: 'https://www.wordfence.com/blog/2020/08/newsletter-plugin-vulnerabilities-affect-over-300000-sites/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin gravity-forms:
