CVE-2020-17451 and CVE-2020-17452 assigned

--- a/yamls/flatcore.yml
+++ b/yamls/flatcore.yml
@@ -7,7 +7,8 @@
 # CVE-2017-1000428
 # CVE-2019-10652
 # CVE-2019-13961
-# TODO 1.5.7 https://lists.openwall.net/full-disclosure/2020/08/07/1 CVE requested 2020-08-08 #941622
+# CVE-2020-17451 1.5.7 XSS https://lists.openwall.net/full-disclosure/2020/08/07/1
+# CVE-2020-17452 1.5.7 Incorrect Access Control https://lists.openwall.net/full-disclosure/2020/08/07/1
 flatCore CMS:
   1:
     location: ['/acp/versions.php']
