--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -142,42 +142,62 @@
 # TODO 1.33.12/1.32.6/1.31.6 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-December/000243.html
 # TODO 1.34.0/1.33.3/1.32.6/1.30.6 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-December/000241.html
 # CVE-2020-10960 1.34.1/1.33.3/1.31.7 https://lists.wikimedia.org/pipermail/wikitech-l/2020-March/093243.html
+# CVE-2020-26121 1.35.0/1.34.3/1.31.9 https://gerrit.wikimedia.org/r/q/Ib852a96afc4dca10516d0510e69c10f9892b351b
+# CVE-2020-25689 1.34.3/1.31.9 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html https://lists.wikimedia.org/pipermail/wikitech-l/2020-September/093888.html https://phabricator.wikimedia.org/T260485
+# CVE-2020-25812 1.34.3/1.31.9 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html https://lists.wikimedia.org/pipermail/wikitech-l/2020-September/093888.html
+# CVE-2020-25813 1.34.3/1.31.9 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html https://lists.wikimedia.org/pipermail/wikitech-l/2020-September/093888.html
+# CVE-2020-25815 1.34.3/1.31.9 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html https://lists.wikimedia.org/pipermail/wikitech-l/2020-September/093888.html
+# CVE-2020-17367 1.34.3/1.31.9 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html https://lists.wikimedia.org/pipermail/wikitech-l/2020-September/093888.html
+# CVE-2020-17368 1.34.3/1.31.9 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html https://lists.wikimedia.org/pipermail/wikitech-l/2020-September/093888.html
+# CVE-2020-25814 1.34.3/1.31.9 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html https://lists.wikimedia.org/pipermail/wikitech-l/2020-September/093888.html
+# CVE-2020-25828 1.34.3/1.31.9 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html https://lists.wikimedia.org/pipermail/wikitech-l/2020-September/093888.html
+# CVE-2020-25869 1.35.0/1.34.3/1.31.9 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html https://lists.wikimedia.org/pipermail/wikitech-l/2020-September/093888.html https://gerrit.wikimedia.org/r/q/Iaa886a1824e5a74f4501ca7e28917c780222aac0 https://gerrit.wikimedia.org/r/q/I2336954c665366a99f9995df9b08071d4de6db79
+# CVE-2020-25827 1.34.3/1.31.9 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html https://lists.wikimedia.org/pipermail/wikitech-l/2020-September/093888.html
+# CVE-2020-26120 1.35.0/1.34.3/1.31.9 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000265.html https://gerrit.wikimedia.org/r/q/I42e079bc875d17b336ab015f3678eaedc26e10ea
+MediaWiki 1.35:
+  1:
+    location: ['/includes/DefaultSettings.php']
+    secure_version: '1.35.0'
+    regexp: ['\$wgVersion.*?(?P<version>1\.35\.[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-25869 https://nvd.nist.gov/vuln/detail/CVE-2020-26120 https://nvd.nist.gov/vuln/detail/CVE-2020-26121'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 MediaWiki 1.34:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
-    regexp: ['\$wgVersion.*?(?P<version>1\.33\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-10960 https://lists.wikimedia.org/pipermail/wikitech-l/2020-March/093243.html'
+    secure_version: '1.34.3'
+    regexp: ['\$wgVersion.*?(?P<version>1\.34\.[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-17367 https://nvd.nist.gov/vuln/detail/CVE-2020-17368 https://nvd.nist.gov/vuln/detail/CVE-2020-25689 https://nvd.nist.gov/vuln/detail/CVE-2020-25812 https://nvd.nist.gov/vuln/detail/CVE-2020-25813 https://nvd.nist.gov/vuln/detail/CVE-2020-25814 https://nvd.nist.gov/vuln/detail/CVE-2020-25815 https://nvd.nist.gov/vuln/detail/CVE-2020-25827 https://nvd.nist.gov/vuln/detail/CVE-2020-25828 https://nvd.nist.gov/vuln/detail/CVE-2020-25869 https://nvd.nist.gov/vuln/detail/CVE-2020-26120 https://nvd.nist.gov/vuln/detail/CVE-2020-26121 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.33:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.33.3'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.33\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-10960 https://lists.wikimedia.org/pipermail/wikitech-l/2020-March/093243.html'
+    cve: 'MediaWiki 1.33 is end of life. Please see: https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-June/000253.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.32:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.32.6'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.32\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-December/000241.html'
+    cve: 'MediaWiki 1.32 is end of life. Please see: https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-January/000245.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.31:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.7'
+    secure_version: '1.31.9'
     regexp: ['\$wgVersion.*?(?P<version>1\.31\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-10960 https://lists.wikimedia.org/pipermail/wikitech-l/2020-March/093243.html'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-17367 https://nvd.nist.gov/vuln/detail/CVE-2020-17368 https://nvd.nist.gov/vuln/detail/CVE-2020-25689 https://nvd.nist.gov/vuln/detail/CVE-2020-25812 https://nvd.nist.gov/vuln/detail/CVE-2020-25813 https://nvd.nist.gov/vuln/detail/CVE-2020-25814 https://nvd.nist.gov/vuln/detail/CVE-2020-25815 https://nvd.nist.gov/vuln/detail/CVE-2020-25827 https://nvd.nist.gov/vuln/detail/CVE-2020-25828 https://nvd.nist.gov/vuln/detail/CVE-2020-25869 https://nvd.nist.gov/vuln/detail/CVE-2020-26120 https://nvd.nist.gov/vuln/detail/CVE-2020-26121 https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-September/000260.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.30:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.30\.[0-9.]{1,})']
     cve: 'MediaWiki 1.30 is end of life.'
     fingerprint: detect_general
@@ -185,7 +205,7 @@ MediaWiki 1.30:
 MediaWiki 1.29:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.29\.[0-9.]{1,})']
     cve: 'MediaWiki 1.29 is end of life.'
     fingerprint: detect_general
@@ -193,7 +213,7 @@ MediaWiki 1.29:
 MediaWiki 1.28:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.28\.[0-9.]{1,})']
     cve: 'MediaWiki 1.28 is end of life.'
     fingerprint: detect_general
@@ -201,7 +221,7 @@ MediaWiki 1.28:
 MediaWiki 1.27:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.27\.[0-9.]{1,})']
     cve: 'MediaWiki 1.27 is end of life.'
     fingerprint: detect_general
@@ -209,7 +229,7 @@ MediaWiki 1.27:
 MediaWiki 1.26:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.26\.[0-9.]{1,})']
     cve: 'MediaWiki 1.26 is end of life.'
     fingerprint: detect_general
@@ -217,7 +237,7 @@ MediaWiki 1.26:
 MediaWiki 1.25:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.25\.[0-9.]{1,})']
     cve: 'MediaWiki 1.25 is end of life.'
     fingerprint: detect_general
@@ -225,7 +245,7 @@ MediaWiki 1.25:
 MediaWiki 1.24:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.24\.[0-9.]{1,})']
     cve: 'MediaWiki 1.24 is end of life.'
     fingerprint: detect_general
@@ -233,7 +253,7 @@ MediaWiki 1.24:
 MediaWiki 1.23:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.23\.[0-9.]{1,})']
     cve: 'MediaWiki 1.23 is end of life.'
     fingerprint: detect_general
@@ -241,7 +261,7 @@ MediaWiki 1.23:
 MediaWiki 1.22:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
     cve: 'MediaWiki 1.22 is end of life.'
     fingerprint: detect_general
@@ -249,7 +269,7 @@ MediaWiki 1.22:
 MediaWiki 1.21:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.21\.[0-9.]{1,})']
     cve: 'MediaWiki 1.21 is end of life.'
     fingerprint: detect_general
@@ -257,7 +277,7 @@ MediaWiki 1.21:
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
     cve: 'MediaWiki 1.20 is end of life.'
     fingerprint: detect_general
@@ -265,7 +285,7 @@ MediaWiki 1.20:
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
     cve: 'MediaWiki 1.19 is end of life.'
     fingerprint: detect_general
@@ -273,7 +293,7 @@ MediaWiki 1.19:
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.34.1'
+    secure_version: '1.34.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18 is end of life.'
     fingerprint: detect_general
