--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -256,15 +256,15 @@
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '5.4.2'
+    secure_version: '5.5.2'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2020-4046 https://nvd.nist.gov/vuln/detail/CVE-2020-4047 https://nvd.nist.gov/vuln/detail/CVE-2020-4048 https://nvd.nist.gov/vuln/detail/CVE-2020-4049 https://nvd.nist.gov/vuln/detail/CVE-2020-4050'
+    cve: 'https://wordpress.org/news/2020/10/wordpress-5-5-2-security-and-maintenance-release/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '5.4.2'
+    secure_version: '5.5.2'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2020-4046 https://nvd.nist.gov/vuln/detail/CVE-2020-4047 https://nvd.nist.gov/vuln/detail/CVE-2020-4048 https://nvd.nist.gov/vuln/detail/CVE-2020-4049 https://nvd.nist.gov/vuln/detail/CVE-2020-4050'
+    cve: 'https://wordpress.org/news/2020/10/wordpress-5-5-2-security-and-maintenance-release/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
