--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -315,9 +315,9 @@ WordPress plugin gravity-forms:
 WordPress plugin usc-e-shop:
   1:
     location: ['/wp-content/plugins/usc-e-shop/readme.txt']
-    secure_version: '1.8.3'
+    secure_version: '1.9.36'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-4826 https://nvd.nist.gov/vuln/detail/CVE-2016-4827'
+    cve: 'https://www.wordfence.com/blog/2020/11/object-injection-vulnerability-in-welcart-e-commerce-plugin/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested. (2020-11-07)
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin mdc-private-message:
