--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -317,7 +317,7 @@ WordPress plugin usc-e-shop:
     location: ['/wp-content/plugins/usc-e-shop/readme.txt']
     secure_version: '1.9.36'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2020/11/object-injection-vulnerability-in-welcart-e-commerce-plugin/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested. (2020-11-07)
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-28339 https://www.wordfence.com/blog/2020/11/object-injection-vulnerability-in-welcart-e-commerce-plugin/ https://threatpost.com/wordpress_open_to_attacks_welcart_bug/161037/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin mdc-private-message:
