--- a/yamls/abantecart.yml
+++ b/yamls/abantecart.yml
@@ -1,5 +1,6 @@
 # URL: http://www.abantecart.com/
 # CVE-2016-XXXX https://cxsecurity.com/issue/WLB-2016120035
+# CVE-2016-10755
 # CVE-2018-20141 1.2.14 https://www.netsparker.com/web-applications-advisories/ns-18-049-cross-site-scripting-in-abantecart/
 Abantecart:
   1:
