--- a/yamls/etherpad.yml
+++ b/yamls/etherpad.yml
@@ -1,6 +1,14 @@
 # URL: http://etherpad.org/
-# CVE-2015-2298
-# CVE-2015-3297
+# CVE-2015-2298 TODO
+# CVE-2015-3297 1.5.3
+# CVE-2015-3309 TODO
+# CVE-2015-4085 TODO
+# CVE-2018-6834 TODO
+# CVE-2018-6835 TODO
+# CVE-2018-9325 TODO
+# CVE-2018-9326 TODO
+# CVE-2018-9327 TODO
+# CVE-2018-9845 TODO
 Etherpad:
   1:
     location: ['/src/package.json']
