--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -92,6 +92,9 @@
 # oc-sa-2017-005    CVE-2017-9339   10.0.2
 # oc-sa-2017-006    CVE-2017-9340   10.0.2
 # oc-sa-2017-007    CVE-2017-9338   10.0.2/9.1.6/9.0.10/8.2.12
+# TODO CVE-2014-2049
+# TODO CVE-2014-2050
+# TODO CVE-2014-2051
 ownCloud 10.0:
   1:
     location: ['/version.php']
